src/test/resources/de/cd4analysis/cocos/mcg/invalid/CD4AC2006.cd
package de.cd4analysis.cocos;

classdiagram CD4AC2006 {
  abstract interface A;
  derived interface B;
  / interface C;
  final interface D;
  private interface E;
  protected interface F;
  static interface G;
}
